--- a/template/base.html
+++ b/template/base.html
@@ -60,6 +60,10 @@
         </section>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/3.0.2/timeago.min.js"></script>
+    <script>
+        timeago().render(document.querySelectorAll('.time-ago'));
+    </script>
 </body>
 
 </html>
