--- a/template/check.html
+++ b/template/check.html
@@ -37,7 +37,7 @@
                         <tr>
                             <td>{{ $block.blockNumber }}</td>
                             <td>{{ $block.blockReward }}</td>
-                            <td>{{ convertToDatetime $block.timeStamp }}</td>
+                            <td class="time-ago" datetime="{{ convertToDatetime $block.timeStamp }}"></td>
                         </tr>
                         {{ end }}
                     </tbody>
@@ -48,6 +48,8 @@
                     <p><em>{{ .BlockResp.Message }}</em></p>
                 </blockquote>
             {{ end }}
+            <hr>
+            <a href="/" class="button">Back to Home</a>
         </div>
     </div>
 </div>
