--- a/template/index.html
+++ b/template/index.html
@@ -4,10 +4,11 @@
     <div class="row">
         <div class="column">
             <h3>Enter your Ethereum address here:</h3>
-            <form action="/check" method="POST">
+            <form action="/check" method="GET">
                 <fieldset>
                     <label for="addrField">Address</label>
-                    <input name="ether_address" type="text" placeholder="Enter you Ethereum address" id="addrField" value="{{ if ne .Address "" }}{{ .Address }}{{ end }}">
+                    <input name="ether_address" type="text" required placeholder="Enter you Ethereum address" id="addrField"
+                        value="{{ if ne .Address "" }}{{ .Address }}{{ end }}">
                     {{ if eq .IsValid false }}
                     <blockquote class="error">
                         <i>Ethereum address is invalid</i>
@@ -16,6 +17,30 @@
                     <input class="button-primary" type="submit" value="Go to check">
                 </fieldset>
             </form>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="column">
+            <h4>Recently viewed address:</h4>
+            <div class="recent-address">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Address</th>
+                            <th>Datetime</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{ range $addr := .recentAddrs }}
+                        <tr>
+                            <td><a href="/check?ether_address={{ $addr.Address }}">{{ $addr.Address }}</a></td>
+                            <td class="time-ago standard" datetime="{{ $addr.Datetime }}"></td>
+                        </tr>
+                        {{ end }}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
